--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         function calculate() {
             try {
                 if (screenValue === '12+07+04') {
-                    screenValue = 'Hi Akbar, sehat selalu 🖤';
+                    screenValue = 'Hi Akbar, sehat selalu';
                 } else {
                     screenValue = eval(screenValue).toString();
                 }
